tests/compile_fail/state_machine/long_graph_cycle.stderr
error: state graph cycle detected in children of Dead:
       Dead
       └─ Beef
          └─ Foo
             ├─ Bar
             └─ Fizz
                └─ Buzz
                   └─ Dead
  --> tests/compile_fail/state_machine/long_graph_cycle.rs:35:19
   |
35 |     impl Substate<Dead> for Beef {}
   |                   ^^^^
